# mobile-use-detection

./: .gitignore  .pre-commit-config.yaml  EDA.dvc  EDA_testing.ipynb.dvc  Makefile  Makefile.init  README.md  data.dvc  dvc.yaml  main.py  main_app.py  pipeline_testing.ipynb.dvc  predictions.json  pyproject.toml  rawdata.dvc  testing.csv.dvc  trainer_testing.ipynb.dvc
.dvc/: config
EDA/: EDA.ipynb  EDA_functions.py  datatransformation.ipynb
EDA/dataconfig/: dataconfig.yaml
EDA_train_phase/: .gitignore  EDA_testing.ipynb  EDA_testing.ipynb.dvc  data.dvc  main.py  pipeline_testing.ipynb  pipeline_testing.ipynb.dvc  testing.ipynb.dvc
EDA_train_phase/EDA/: EDA_functions.py
EDA_train_phase/conf/: config.yaml
EDA_train_phase/metrics/: Best_parameters_model__GridSearch_Tree-Based.json  Tree_Classifier_GridSearchCV_Test_metrics.json  Tree_Classifier_GridSearchCV_Train_metrics  Tree_Classifier_GridSearchCV_Train_metrics.json  Tree_Classifier_GridSearchCV_parameters.json  Tree_Classifier_New_Test_metrics.json  Tree_Classifier_New_Train_metrics.json  Tree_Classifier_New_parameters.json  categorical_mapping.json
EDA_train_phase/src/: .gitignore  __init__.py  hydra_config.py  json_schema.json.dvc  main.py  metrics.dvc  models.dvc
Phases/ConfTrain/: config.yaml
Phases/DataProduction/: predictions.json
Phases/EdaSrc/: EDA_functions.py
Phases/MetricsTrain/: Best_parameters_model__GridSearch_Tree-Based.json  Tree_Classifier_GridSearchCV_Test_metrics  Tree_Classifier_GridSearchCV_parameters  Tree_Classifier_GridSearchCV_parameters.json  Tree_Classifier_New_v4_Test_metrics.json
Phases/SrcEda/: EDA_functions.py
images/: docker-compose.yml
images/backend/: Dockerfile  Frameworks.py  Tree_Classifier_New_v4.joblib  main.py  predictions.json  requirements.txt  validation_classes.py
images/frontend/: Dockerfile  app.py  appfuncs.py  main_app.py
production_phase/: __init__.py
production_phase/data/: predictions.json
production_phase/interfaces/: ApiProtocols.py  ValidationsProtocols.py  __init__.py
src/: .gitignore  logger.py  testing.ipynb.dvc  train.py  transformation_pipeline.py  trasnformation_pipeline.py
(+88 files in other folders)
