[tool.poetry]
name = "mobile-usage-detection"
version = "0.1.0"
description = ""
authors = ["Hector <data_analitics_HLH@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
datasets = "^3.1.0"
hydra-core = "^1.3.2"
transformers = "^4.46.2"
polars = "^1.12.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
numba = "^0.60.0"
mlflow = "^2.17.2"
dagshub = "^0.3.42"
pandera = "^0.20.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
black = "^23.7.0"  # Update to match the version from the pre-commit config
flake8 = "^6.1.0"  # Add flake8 to match the version from the pre-commit config
isort = "^5.12.0"  # Add isort to match the version from the pre-commit config
interrogate = "^1.5.0"  # Add interrogate to match the version from the pre-commit config

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
