[tool.poetry]
name = "mobile-usage-detection"
version = "0.1.0"
description = ""
authors = ["Hector <data_analitics_HLH@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
polars = "^1.12.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
mlflow = "^2.17.2"
dagshub = "^0.3.42"
pandera = {extras = ["polars"], version = "^0.21.0"}
scikit-optimize = "^0.10.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
gradio = "^5.7.1"
streamlit = "^1.40.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
black = "^24.3.0"  # Update to match the version from the pre-commit config
flake8 = "^6.1.0"  # Add flake8 to match the version from the pre-commit config
isort = "^5.12.0"  # Add isort to match the version from the pre-commit config
interrogate = "^1.5.0"  # Add interrogate to match the version from the pre-commit config

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
